@@ -162,7 +162,7 @@
       <!-- End Fluid Dynamics -->
       <!-- rhug -->
       <tr valign="top">
-        <td><b><a href="http://sourceware.org/rhug/">rhug</a></b></td>
+        <td><b><a href="https://sourceware.org/rhug/">rhug</a></b></td>
 	<td>Anthony Green and friends have set up rhug, a collection
 	    of free software Java packages set up to build with gcj.
 	    Both sources and RPMs are available.
