@@ -115,7 +115,7 @@ availability of two experimental Just-In-Time (JIT) interpreters for GCJ based
 on <a href="http://freecode.com/projects/libjit">libjit</a> and <a
 href="http://llvm.org/">LLVM</a> respectively. The source code for these
 JITs is available via the &quot;gcj-jit&quot; module of the <a
-href="http://sourceware.org/rhug/">rhug</a> repository.
+href="https://sourceware.org/rhug/">rhug</a> repository.
 </dd>
 
 <dt>April 4, 2006</dt>
