@@ -152,7 +152,7 @@ code size heuristics.  It is enabled by default when compiling at -O3.
 <dd>
 Gary Benson from Red Hat has released 
 <a href="http://people.redhat.com/gbenson/naoko/">Naoko</a>: a subset 
-of the <a href="http://sourceware.org/rhug/">rhug</a> packages 
+of the <a href="https://sourceware.org/rhug/">rhug</a> packages 
 that have been repackaged for eventual inclusion in Red Hat Linux. 
 Naoko basically comprises binary RPMS of Ant, Tomcat, and their 
 dependencies built with gcj.
@@ -171,7 +171,7 @@ A team of hackers from Red Hat has released RPMS for a version
 of <a href="http://www.eclipse.org/">Eclipse</a>, a free software IDE
 written in Java, that has been compiled with a modified gcj.
 You can find more information
-<a href="http://sourceware.org/eclipse/">here</a>.  We'll be
+<a href="https://sourceware.org/eclipse/">here</a>.  We'll be
 integrating the required gcj patches in the near future.
 </dd>
 
@@ -425,7 +425,7 @@ find bugs!
 <dt>February 8, 2001</dt>
 <dd>
 Made use of Warren Levy's change to the
-<a href="http://sourceware.org/mauve/">Mauve test suite</a> to handle
+<a href="https://sourceware.org/mauve/">Mauve test suite</a> to handle
 regressions.
 Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
 <tt>xfails</tt> file of known library failures from the source tree
