@@ -1,3 +1,9 @@
+2016-05-28  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* done.html: Convert sourceware.org links to https.
+	* index.html: Ditto.
+	* news.html: Ditto.
+
 2016-04-17  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* status.html: Remove.
